2013-02-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (get_info): Validate info_type in capital letters
	format.

2013-02-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (cpe-details): Add details parameter to CVEs details
	link.

2013-02-26  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (get_info): Return error message when an invalid
	info_type is provided. Update documentation and error messages.

2013-02-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (prognostic-description): Move into template section.

2013-02-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (prognostic-description): New template.
	(result-detailed): For prognostic results, produce the description with
	prognostic-description so that the browser does paragraph wrapping.

2013-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump to 4.0+beta6.

	* CMakeLists.txt: Updated version number.

	* src/html/help.xsl: Updated version number.

2013-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 4.0+beta5 release.

	* CHANGES: Updated.

2013-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/html/gsad.xsl (html-footer), src/html/help.xsl (about.html),
	src/gsad.c (main): Extend copyright notice to include 2013.

2013-02-21  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (get_report): Don't apply default filter when result
	filtering form is applied.

2013-02-21  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (ref_xref_list): Add special display case for URL
	cross-references.

2013-02-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Move "-Werror" flag to the "Debug" build type.

	* CMakeLists.txt: Move "-Werror" from CMAKE_C_FLAGS to
	CMAKE_C_FLAGS_DEBUG to keep it out of the "Release" build type.

2013-02-20  Timo Pollmeier  <timo.pollmeier@greenbone.net>
