@@ -196,7 +196,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
       <table><tr><td valign="top">
 
       <h1>Greenbone Security Assistant</h1>
-      <h3>Version 4.0+beta6</h3>
+      <h3>Version 5.0+beta1</h3>
 
       <p>
       The Greenbone Security Assistant (GSA) is the web-based graphical
